Runtime.exec fails in linux
Resolved:VNFSDK-21
VNF SDK function test

Change-Id: If356d8b15c6d547f439ced92454a7067d98aaff5
Signed-off-by: Murali-P <murali.p@huawei.com>